--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="og:title" content="Little Lemon Restaurant" />
+    <meta
+      name="og:description"
+      content="Web site created using create-react-app"
+    />
+    <meta name="og:image" content="/Logo.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
